# prog5

./: README.md
lab1/: report.md
lab1/code/: activation_script.py
lab1/code/rootserver/: myremotemodule.py
lab2/: report.md
lab2/code/: getweatherdata.py  getweatherdata_test.py  main.py
lab3/: report.md
lab3/code/: __init__.py  setup.py
lab3/code/WeatherDataUniLW3.egg-info/: PKG-INFO  SOURCES.txt
lab4/: report.md
lab4/code/: README.md  even_numbers_iterator.py  gen_fib.py  main.py  test_fib.py
lab5/: report.md
lab5/code/: README.md  main.py  test.py
lab6/: report.md
lab6/code/: README.md  main.py  test.py
lab7/: report.md
lab7/code/: README.md  main.py
lab7/code/templates/: index.html
lab9/: README.md  config.py  pyproject.toml  requirements.txt
lab9/app/: __init__.py  models.py
lab9/app/routes/: main.py
lab9/app/templates/: home.html  login.html  profile.html  register.html
