[tool.poetry]
name = "bonus system"
version = "0.1.0"
description = "Cashback bonys system"
authors = ["Herman <palchukgerman@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Werkzeug = "3.1.3"
flask = "^3.1.0"
flask-JWT-Extended = "4.7.1"
flask-SQLAlchemy = "3.1.1"
fastjsonschema = "2.21.1"
SQLAlchemy = "2.0.36"
Mako = "1.3.8"
alembic = "1.14.0"
flask-migrate = "4.0.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
